[gd_scene load_steps=18 format=3 uid="uid://crkdwbwxbm0fr"]

[ext_resource type="Script" path="res://Scripts/Boss1/boss_1.gd" id="1_1o6uv"]
[ext_resource type="Texture2D" uid="uid://p2o2ucp0xh25" path="res://Assets/Texture/Boss1/Base.png" id="1_ktwyk"]
[ext_resource type="Texture2D" uid="uid://cqvy2h86fhdny" path="res://Assets/Texture/Boss1/Gun.png" id="2_1e2w1"]
[ext_resource type="Texture2D" uid="uid://ea7yn7iawkw3" path="res://Assets/Texture/Particles/Ship Particle.png" id="4_jtete"]
[ext_resource type="PackedScene" uid="uid://wja8hp8m0buw" path="res://Scenes/Component/hitbox_component.tscn" id="5_t2wp1"]
[ext_resource type="PackedScene" uid="uid://tc8lno8rk5tw" path="res://Scenes/Boss1/drone.tscn" id="6_nebwk"]
[ext_resource type="PackedScene" uid="uid://chia8b5acjtar" path="res://Scenes/Component/health_component.tscn" id="6_wukos"]
[ext_resource type="PackedScene" uid="uid://b3pbwnmamk2s" path="res://Scenes/BulletStuff/bullet_spawner.tscn" id="7_arb8h"]

[sub_resource type="Curve" id="Curve_33wvm"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_gdxt5"]
curve = SubResource("Curve_33wvm")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_scbbs"]
emission_shape = 3
emission_box_extents = Vector3(1, 10, 1)
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 70.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 2.0
scale_max = 3.0
scale_curve = SubResource("CurveTexture_gdxt5")
turbulence_noise_scale = 1.0
turbulence_noise_speed = Vector3(0.5, 0.5, 0.5)

[sub_resource type="Animation" id="Animation_02jui"]
resource_name = "PHASE2_RESET"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopGun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17, -8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BotGun:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17, 8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxComponent/TopGun2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(19, -8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxComponent/BotGun2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(19, 8)]
}

[sub_resource type="Animation" id="Animation_51xjk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopGun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BotGun:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxComponent/TopGun2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxComponent/BotGun2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Drone:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-11, -27)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Drone2:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-11, 27)]
}

[sub_resource type="Animation" id="Animation_anlh7"]
resource_name = "change_gun_pos"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopGun:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(8, -8), Vector2(8, -8), Vector2(17, -8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BotGun:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(8, 8), Vector2(8, 8), Vector2(17, 8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxComponent/BotGun2:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(2, 0), Vector2(10, 8), Vector2(10, 8), Vector2(19, 8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxComponent/TopGun2:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(2, 0), Vector2(10, -8), Vector2(10, -8), Vector2(19, -8)]
}

[sub_resource type="Animation" id="Animation_bvoud"]
resource_name = "drone1_died"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Drone:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-11, -27), Vector2(17, -27), Vector2(17, -13)]
}

[sub_resource type="Animation" id="Animation_hpq0a"]
resource_name = "drone2_died"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Drone2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-11, 27), Vector2(17, 27), Vector2(17, 13)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3uumw"]
_data = {
"PHASE2_RESET": SubResource("Animation_02jui"),
"RESET": SubResource("Animation_51xjk"),
"change_gun_pos": SubResource("Animation_anlh7"),
"drone1_died": SubResource("Animation_bvoud"),
"drone2_died": SubResource("Animation_hpq0a")
}

[node name="Boss1" type="Node2D" groups=["Enemy"]]
script = ExtResource("1_1o6uv")

[node name="HealthComponent" parent="." instance=ExtResource("6_wukos")]
max_hp = 100.0

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health") instance=ExtResource("5_t2wp1")]
collision_layer = 2
health = NodePath("../HealthComponent")

[node name="Base2" type="CollisionPolygon2D" parent="HitboxComponent"]
polygon = PackedVector2Array(-33, 0, -11, -18, -2, -23, 22, -23, 33, 0, 23, 23, -2, 23, -11, 18)

[node name="TopGun2" type="CollisionPolygon2D" parent="HitboxComponent"]
position = Vector2(2, 0)
polygon = PackedVector2Array(-53, -12, -32, -12, -26, -18, -18, -18, -11, -25, -4, -25, -1, -22, -1, -14, -8, -6, -53, -6)

[node name="BotGun2" type="CollisionPolygon2D" parent="HitboxComponent"]
position = Vector2(2, 0)
scale = Vector2(1, -1)
polygon = PackedVector2Array(-53, -12, -32, -12, -26, -18, -18, -18, -11, -25, -4, -25, -1, -22, -1, -14, -8, -6, -53, -6)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(38, 0)
amount = 15
process_material = SubResource("ParticleProcessMaterial_scbbs")
texture = ExtResource("4_jtete")
lifetime = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3uumw")
}

[node name="Base" type="Sprite2D" parent="."]
use_parent_material = true
texture = ExtResource("1_ktwyk")
metadata/_edit_lock_ = true

[node name="BulletSpawner" parent="." instance=ExtResource("7_arb8h")]
number_of_bullet = 15
fire_rate = 1.0
bullet_speed = 125.0
rotate_deg = 1.0
metadata/_edit_lock_ = true

[node name="Drone" parent="." instance=ExtResource("6_nebwk")]

[node name="Drone2" parent="." instance=ExtResource("6_nebwk")]
position = Vector2(-11, 27)
scale = Vector2(1, -1)

[node name="TopGun" type="Node2D" parent="."]
use_parent_material = true
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="TopGun"]
use_parent_material = true
position = Vector2(-25, -15)
texture = ExtResource("2_1e2w1")

[node name="Muzzle" type="Marker2D" parent="TopGun"]
position = Vector2(-52, -9)

[node name="BotGun" type="Node2D" parent="."]
use_parent_material = true
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="BotGun"]
use_parent_material = true
position = Vector2(-25, 15)
texture = ExtResource("2_1e2w1")
flip_v = true

[node name="Muzzle" type="Marker2D" parent="BotGun"]
position = Vector2(-52, 9)

[connection signal="taking_damage" from="HealthComponent" to="." method="_on_health_component_taking_damage"]
[connection signal="zero_hp" from="HealthComponent" to="." method="_die"]
[connection signal="drone_die" from="Drone" to="." method="_on_drone_drone_die"]
[connection signal="drone_die" from="Drone2" to="." method="_on_drone_2_drone_die"]

[editable path="Drone"]
[editable path="Drone2"]
